# sp_labs_all

Lab_1-2/: README.md
Lab_1-2/Lab1/: Employee.cpp  Makefile  Position.h
Lab_1-2/Lab2/dynamic_libs/: Employee.cpp  Employee.h  FileDatabase.cpp  FileDatabase.h  FileDatabase.txt  Gender.h  Makefile  Position.h  README.md  UserInterface.cpp  binary
Lab_1-2/Lab2/static_libs/: Employee.h  Gender.h  Makefile  main.cpp
Lab_1-2/Lab3/: Lab3Tests.pro
Lab_1-2/Lab3/Controllers/: test_controller.cpp  test_controller.h
Lab_1-2/Lab3/DataAccess/: QuestionFileRepository.cpp  QuestionOptionFileRepository.cpp  TestFileRepository.cpp  TestResultFileRepository.cpp  UnitOfWorkFileDB.cpp  UserFileRepository.cpp
Lab_1-2/Lab3/DataAccess/Abstract/: test_result_repo.h  user_repo.h
Lab_1-2/Lab3/DataAccess/Headers/: QuestionFileRepository.h  QuestionOptionFileRepository.h  TestFileRepository.h  TestResultFileRepository.h  TestTypeFileRepository.h  UserFileRepository.h
Lab_1-2/Lab3/Domain/: question.cpp  question_option.cpp  test.cpp  test_result.cpp
Lab_1-2/Lab3/Domain/Headers/: question.h  question_option.h  test.h  test_result.h
Lab_1-2/Lab3/Entities/Headers/: question.h  user.h
Lab_1-2/Lab3/FileDatabase/: question_db.cpp  question_option_db.cpp  test_db.cpp  test_result_db.cpp  test_type_db.cpp  user_db.cpp
Lab_1-2/Lab3/FileDatabase/Headers/: question_db.h  test_db.h
Lab_1-2/Lab3/Mappers/: question_mapper.cpp  test_mapper.cpp  test_result_mapper.cpp
Lab_1-2/Lab3/Mappers/Headers/: question_mapper.h  question_option_mapper.h  test_mapper.h
Lab_1-2/Lab3/Services/: TestResultService.cpp  TestService.cpp
Lab_1-2/Lab3/Services/Headers/: TestResultService.h  TestService.h
kernel_labs/cdev_lab/: cdev_module.ko  modules.order
kernel_labs/hello_world/: hw_module.c  hw_module.ko
kernel_labs/list_lab/: list_module.c  list_module.ko  list_module.mod.c  modules.order
km_labs/: README.md
km_labs/cdev_lab/: README.md  cdev_module.c  cdev_module.mod.c
km_labs/hello_world/: README.md  modules.order
km_labs/list_lab/: README.md
qt_client_Lab_3-5/: CMakeLists.txt  aboutpage.cpp  aboutpage.h  aboutpage.ui  arrangeusersbyscore.cpp  arrangeusersbyscore.h  arrangeusersbyscore.ui  choosetestforuserarrangement.cpp  choosetestforuserarrangement.h  choosetestforuserarrangement.ui  choosetestwidget.cpp  choosetestwidget.h  choosetestwidget.ui  main.cpp  resultwindow.cpp  resultwindow.h  resultwindow.ui  selectuser.cpp  selectuser.h  selectuser.ui  testwindow.cpp  testwindow.h  testwindow.ui  userresults.cpp  userresults.h  userresults.ui  window.cpp  window.h  window.ui
qt_client_Lab_3-5/Database/: QuestionDB.txt  TestDB.txt  TestResultDB.txt
qt_client_Lab_3-5/Lab3/Controllers/: test_controller.cpp  test_controller.h  test_controller_local.cpp  test_controller_local.h
qt_client_Lab_3-5/Lab3/DataAccess/Abstract/: question_option_repo.h  question_repo.h  test_result_repo.h  user_repo.h
qt_client_Lab_3-5/Lab3/DataAccess/FileRepositories/: TestTypeFileRepository.cpp  UserFileRepository.cpp
qt_client_Lab_3-5/Lab3/DataAccess/FileRepositories/Headers/: TestFileRepository.h  TestResultFileRepository.h  UserFileRepository.h
qt_client_Lab_3-5/Lab3/DataAccess/SqlRepositories/: UserSqlRepository.cpp
qt_client_Lab_3-5/Lab3/DataAccess/SqlRepositories/Headers/: QuestionOptionSqlRepository.h  UnitOfWorkSqlDB.h  UserSqlRepository.h
qt_client_Lab_3-5/Lab3/Domain/: question.cpp  test.cpp  test_result.cpp  user.cpp
qt_client_Lab_3-5/Lab3/Domain/Headers/: question.h  test_result.h
qt_client_Lab_3-5/Lab3/FileDatabase/: test_db.cpp
qt_client_Lab_3-5/Lab3/FileDatabase/Headers/: question_option_db.h
qt_client_Lab_3-5/Lab3/Mappers/: question_mapper.cpp  test_mapper.cpp  user_mapper.cpp
qt_client_Lab_3-5/Lab3/Mappers/Headers/: user_mapper.h
qt_client_Lab_3-5/Lab3/Services/Headers/: TestResultService.h  TestService.h
qt_server_Lab_6/: CMakeLists.txt  Parser.cpp  Parser.h  ServerWorker.cpp  ServerWorker.h  TestServer.cpp  TestServer.h  main.cpp
qt_server_Lab_6/Database/: QuestionOptionDB.txt  UserDB.txt
qt_server_Lab_6/Lab3/Controllers/: test_controller.cpp  test_controller.h
qt_server_Lab_6/Lab3/DataAccess/Abstract/: test_repo.h  test_type_repo.h
qt_server_Lab_6/Lab3/DataAccess/FileRepositories/: QuestionFileRepository.cpp  TestResultFileRepository.cpp  UnitOfWorkFileDB.h
qt_server_Lab_6/Lab3/DataAccess/FileRepositories/Headers/: QuestionFileRepository.h  QuestionOptionFileRepository.h  TestTypeFileRepository.h
qt_server_Lab_6/Lab3/DataAccess/SqlRepositories/: QuestionOptionSqlRepository.cpp  QuestionSqlRepository.cpp  TestResultSqlRepository.cpp  TestSqlRepository.cpp  TestTypeSqlRepository.cpp  UnitOfWorkSqlDB.cpp
qt_server_Lab_6/Lab3/DataAccess/SqlRepositories/Headers/: QuestionSqlRepository.h  TestResultSqlRepository.h  TestSqlRepository.h  TestTypeSqlRepository.h
qt_server_Lab_6/Lab3/Domain/: test_type.cpp
qt_server_Lab_6/Lab3/Domain/Headers/: test.h  test_type.h  user.h
qt_server_Lab_6/Lab3/Entities/Headers/: question_option.h  test.h  test_result.h  test_type.h
qt_server_Lab_6/Lab3/FileDatabase/: question_db.cpp  question_option_db.cpp  test_result_db.cpp  test_type_db.cpp  user_db.cpp
qt_server_Lab_6/Lab3/FileDatabase/Headers/: question_db.h  test_db.h  test_result_db.h  test_type_db.h  user_db.h
qt_server_Lab_6/Lab3/Mappers/: question_option_mapper.cpp  test_type_mapper.cpp
qt_server_Lab_6/Lab3/Mappers/Headers/: test_result_mapper.h  test_type_mapper.h
qt_server_Lab_6/Lab3/Services/: TestResultService.cpp  TestService.cpp  UserService.cpp
qt_server_Lab_6/Lab3/Services/Headers/: UserService.h
